# steambot-old

./: .gitignore  build.gradle.kts  settings.gradle.kts  versions.properties
launcher/: build.gradle.kts
launcher/src/main/kotlin/dev/steambot/launcher/: Injector.kt  Launcher.kt  Updater.kt
launcher/src/main/resources/: tinylog.properties
steambot/: build.gradle.kts
steambot-dll/: CMakeLists.txt
steambot-dll/lib/: PolyHook_2.lib
steambot-dll/src/: common.h  jnipp.cpp  jnipp.h  jvmloader.hpp  main.cpp
steambot-dll/src/bot/: offsets.h  steambot.cpp  steambot.h
steambot-dll/src/bot/hooks/: hooks.h
steambot-dll/src/util/: jnipp.cpp  jvmloader.hpp
steambot/src/main/kotlin/dev/steambot/: SteamBot.kt  SteamBotModule.kt  Test.kt
steambot/src/main/kotlin/dev/steambot/api/: API.kt  Client.kt  Player.kt  Viewport.kt
steambot/src/main/kotlin/dev/steambot/natives/: Callbacks.kt  Functions.kt  OSRS.kt  Offsets.kt
steambot/src/main/kotlin/dev/steambot/overlay/: OverlayFrame.kt  OverlayManager.kt
steambot/src/main/kotlin/dev/steambot/rs/: RSClient.kt  RSPlayer.kt  RSViewport.kt
steambot/src/main/kotlin/dev/steambot/util/: DI.kt  Every.kt  FieldExtension.kt  MemoryDelegate.kt  NativeUtils.kt  Retry.kt
steambot/src/main/kotlin/dev/steambot/util/ext/: ProcessExt.kt
steambot/src/main/resources/: tinylog.properties
